Fix any HTML Semantic Issues Fix any contrast issues Add skip links Add ARIA Roles Add Schema Information where applicable

--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,6 @@
 body {
   font-family: 'Roboto', Helvetica, sans-serif;
-  background-color: grey;
+  background-color: rgb(253, 214, 170);
   margin: 0;
   padding: 0;
 }
@@ -24,6 +24,7 @@ img {
   width: 100%;
 }
 
+/* Nav */
 .main-nav ul {
   list-style: none;
   display: flex;
@@ -44,6 +45,7 @@ img {
   font-size: 1.25rem;
 }
 
+/* Form */
 form input,
 form textarea {
   display: block;
@@ -68,4 +70,30 @@ form button {
 
 .site-footer {
   padding: 2rem 0;
+}
+/* Skip Link */
+.skip-links{
+  list-style: none;
+}
+.skip-links li a{
+  position: absolute;
+  top:-10em;
+}
+
+.skip-links li a:focus{
+  top: 0;
+}
+
+/* Font Size */
+h1{
+  font-size: 2.25rem;
+}
+
+h2{
+  font-size: 1.5rem;
+}
+
+
+p{
+  margin: 1rem 0;
 }
